--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:700|Poppins:300,400,700&display=swap");
 
 $body-family: "Poppins";
 $family-primary: "Lato";
@@ -20,26 +20,146 @@ $menu-item-color: $grey;
 .menu-list a {
   background-color: $grey-darker;
 }
-.break {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5 {
+  font-family: $family-primary;
+}
+
+.column-text {
+  column-width: auto;
+  column-count: 2;
+}
+
+@mixin break-line {
+  position: absolute;
+  content: "";
+  background-color: $red;
+  width: 4%;
+  height: 5px;
+  bottom: -3px;
+}
+@mixin break {
   border-bottom: 1px solid $body-background-color;
   padding: 30px 24px 2px;
   position: relative;
 }
-
-.break::after {
-  position: absolute;
-  content: "";
-  background-color: $red;
-  width: 40px;
-  height: 5px;
-  bottom: -3px;
-  left: 24px;
+.break {
+  @include break;
+  &::after {
+    @include break-line;
+    left: 24px;
+  }
 }
 
+.break-centered {
+  @include break;
+  &::after {
+    @include break-line;
+    left: 48%;
+  }
+}
+
+.dates {
+  font-size: 0.9rem;
+}
 .dates::before {
   font-family: "fontello";
   content: "\e801";
   margin-right: 5px;
+}
+
+.entry .content ul {
+  margin-top: 0.5rem;
+}
+
+.social li {
+  display: inline-block;
+  margin-right: 2px;
+  text-align: center;
+  i {
+    line-height: 35px;
+    font-size: 20px;
+  }
+  a {
+    border: 2px solid #33373d;
+    border-radius: 100%;
+    color: #33373d;
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+  }
+}
+
+.timeline {
+  position: relative;
+}
+
+.timeline::before {
+  background-color: #d8d8d8;
+  bottom: 0;
+  content: "";
+  left: 18px;
+  position: absolute;
+  top: 0;
+  width: 3px;
+  height: 100%;
+}
+
+.entry {
+  padding-left: 50px;
+  padding-top: 20px;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.entry:first-child {
+  margin-top: 50px;
+}
+
+.entry:last-child {
+  padding-bottom: 10px;
+}
+
+.entry::after {
+  background-color: #ef0000;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  content: "";
+  height: 18px;
+  left: 10px;
+  position: absolute;
+  top: 24px;
+  width: 18px;
+}
+
+.timeline.experience::after,
+.timeline.education::after {
+  background-color: #fff;
+  border: 3px solid #d8d8d8;
+  border-radius: 50%;
+  font-family: "fontello";
+  top: -50px;
+  left: -5px;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  text-align: center;
+  color: #000;
+  font-size: 20px;
+  line-height: 45px;
+}
+
+.timeline.experience::after {
+  content: "\e800";
+}
+
+.timeline.education::after {
+  content: "\f19d";
 }
 
 @font-face {
