--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -6,6 +6,7 @@ $red: #d83737;
 $body-background-color: #dbdbdb;
 $text: #777777;
 $grey-darker: #3a3434;
+$warning: $grey-darker;
 $link: $red;
 $link-hover: darken($link, 10%);
 //$card-shadow: none;
@@ -73,10 +74,6 @@ h5 {
   margin-right: 5px;
 }
 
-.entry .content ul {
-  margin-top: 0.5rem;
-}
-
 .social li {
   display: inline-block;
   margin-right: 2px;
@@ -92,22 +89,25 @@ h5 {
     display: inline-block;
     height: 40px;
     width: 40px;
+    &:hover {
+      border-color: $red;
+      color: $red;
+    }
   }
 }
 
 .timeline {
   position: relative;
-}
-
-.timeline::before {
-  background-color: #d8d8d8;
-  bottom: 0;
-  content: "";
-  left: 18px;
-  position: absolute;
-  top: 0;
-  width: 3px;
-  height: 100%;
+  &::before {
+    background-color: #d8d8d8;
+    bottom: 0;
+    content: "";
+    left: 18px;
+    position: absolute;
+    top: 0;
+    width: 3px;
+    height: 100%;
+  }
 }
 
 .entry {
@@ -115,26 +115,26 @@ h5 {
   padding-top: 20px;
   position: relative;
   margin-bottom: 10px;
-}
-
-.entry:first-child {
-  margin-top: 50px;
-}
-
-.entry:last-child {
-  padding-bottom: 10px;
-}
-
-.entry::after {
-  background-color: #ef0000;
-  border: 4px solid #fff;
-  border-radius: 50%;
-  content: "";
-  height: 18px;
-  left: 10px;
-  position: absolute;
-  top: 24px;
-  width: 18px;
+  &::after {
+    background-color: #ef0000;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    content: "";
+    height: 18px;
+    left: 10px;
+    position: absolute;
+    top: 24px;
+    width: 18px;
+  }
+  &:first-child {
+    margin-top: 50px;
+  }
+  &:last-child {
+    padding-bottom: 10px;
+  }
+  .content ul {
+    margin-top: 0.5rem;
+  }
 }
 
 .timeline.experience::after,
